# ts_proto_help

./: .gitignore
official_example/: package.json
updated_example/: .bazelrc  BUILD.bazel  WORKSPACE  app.ts  car.proto  car.spec.ts
updated_example/updated_rules/: BUILD.bazel  change_import_style.js  ts_proto_library_fix.bzl
