load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

bzl_library(
    name = "bzl",
    srcs = glob(["*.bzl"]),
    visibility = ["//:__pkg__"],
)

nodejs_binary(
    name = "change_import_style",
    entry_point = ":change_import_style.js",
    node_modules = "@build_bazel_rules_typescript_grpc_web_compiletime_deps//:node_modules",
    visibility = ["//visibility:public"],
)
